2001-01-30  Tom Tromey  <tromey@redhat.com>

	* automake.in (scan_one_autoconf_file): Don't mention
	omit_dependencies.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (&scan_autoconf_config_files): Extract from
	&scan_one_autoconf_file.
	(&scan_one_autoconf_file): Use it.
	(&scan_autoconf_traces): New.
	($scan_autoconf_files): Use it.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* texinfos.am, tags.am, subdirs.am, multilib.am, mans.am: Add a
	.PHONY target.
	* automake.in (handle_texinfo, handle_man_pages, handle_multilib)
	(handle_etags, handle_subdirs): Don't push into @phony.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (scan_one_autoconf_file): Correctly recognize
	configure.ac.
	
2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (handle_tests_dejagnu): New, extracted from...
	(handle_tests): here.  Use `.PHONY:'.
	
2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (handle_phony): Sort.
	(file_contents_with_transform): Catch `.PHONY:'.
	(handle_tests): Instead dumping the hard coded target check-TESTS
	and registering its .PHONYsm, get them from...
	* check.am: here, new file.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (add_depend2): Use &transform.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (handle_tags): Use &transform.
	(am_error, am_line_error, am_conf_error, read_am_file): Use
	directly arrays in strings, no need for &join.
	Require Perl 5.
	* Makefile.am (maintainer-check): Use grep -w when looking for
	words.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (prog_error): New.
	Spread its use.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (handle_single_transform_list): if (@list) { foreach
	(@list) ...} can be written as a simple `foreach' loop.

2001-01-29  Akim Demaille  <akim@epita.fr>

	* automake.in (define_standard_variables): Use &transform instead
	of build_rx.

2001-01-29  Akim Demaille  <akim@epita.fr>
