@@ -1,3 +1,11 @@
+2001-01-30  Akim Demaille  <akim@epita.fr>
+
+	* automake.in (file_contents): Remove.
+	(file_contents_with_transform): Swap the order of the arguments,
+	and rename as...
+	(file_contents): this.
+	Adjust all uses.
+
 2001-01-30  Tom Tromey  <tromey@redhat.com>
 
 	* automake.in (scan_one_autoconf_file): Don't mention
@@ -22,12 +30,12 @@
 
 	* automake.in (scan_one_autoconf_file): Correctly recognize
 	configure.ac.
-	
+
 2001-01-29  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (handle_tests_dejagnu): New, extracted from...
 	(handle_tests): here.  Use `.PHONY:'.
-	
+
 2001-01-29  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (handle_phony): Sort.
